<?xml version="1.0"?>
<package format="2">
  <name>xsens_mti_driver</name>
  <version>0.2021.4</version>
  <description>ROS driver for Xsens MTi IMU sensors</description>
  <maintainer email="support@xsens.com">Xsens</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>diagnostic_updater</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
